# nodejs_binary_host

./: BUILD.bazel  README.md  WORKSPACE.bazel  foo.ts  my_rule.bzl  package-lock.json  package.json  tsconfig.json
